--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,4 @@ author:
 paginate:         5
 
 # Custom vars
-version:          2.1.0
-
-github:
-  repo:           https://github.com/fgaz/fgaz.github.io
+# usabili con {{ site.var }}
