--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            FGaz
 tagline:          'FGaz blog'
-description:      '[TODO description]'
+description:      '<span style="color:green;">//</span>TODO description'
 url:              http://fgaz.github.io
 baseurl:          /
 
