--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            FGaz
 tagline:          'FGaz blog'
-description:      '<span style="color:green;">//</span>TODO description'
+description:      '<a href="http://fgaz.github.io/fork.html"><code>:(){ :|:& };:</code></a>'
 url:              http://fgaz.github.io
 baseurl:          /
 
