--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,7 @@ paginate:         5
 # Custom vars
 # usabili con {{ site.var }}
 github:           'http://github.com/fgaz/'
+
+defaults:
+    values:
+        comments: true
