--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 pygments:         true
 
 # Permalinks
-permalink:        pretty
+permalink:        /posts/:year-:month-:day-:title/
 
 # Setup
 title:            FGaz
