i don't have https yet

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl:          /
 
 author:
   name:           'fgaz'
-  url:            https://fgaz.me
+  url:            http://fgaz.me
 
 paginate:         5
 
