--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 base_url = "https://fgaz.me"
 
 title = "fgaz"
-description = "Personal website of Francesco Gazzetta (fgaz), a student of computer science from Italy"
+description = "I am a student of computer science. I build things, and sometimes write here"
 default_language = "en"
 
 highlight_code = true
